# lambda-boilerplate

./: .config  .gitignore  .tflint.hcl  Dockerfile  INFRASTRUCTURE.md  Makefile  README.md  application.yml  dev_requirements.txt  docker-compose.yml  pyproject.toml  requirements_dev.in  requirements_dev.txt  tasks.py
.github/workflows/: base.yml
infrastructure/app/: app.tf  locals.tf  main.tf  providers.tf  variables.tf
infrastructure/bootstrap/: outputs.tf  provider.tf  resources.tf  variables.tf
infrastructure/config/: config.yaml
infrastructure/config/app/: app.yaml
infrastructure/config/bootstrap/: bootstrap.yaml
infrastructure/templates/: app.yaml  bootstrap.yaml
script/: apply  bootstrap  deploy  destroy  invoke  plan  prepare  push  start  stop  terraform-lint
src/: base.py
