[tool.poetry]
name = "lambda-boilerplate"
version = "0.0.0"
description = ""
authors = ["Marc Cataford <c.marcandre@gmail.com>"]
license = "MIT"

[tool.poetry.scripts]
lint = "poetry_scripts:lint"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
boto3 = "^1.17.57"
moto = "^2.0.5"
pytest-cov = "^2.11.1"
pytest = "^6.2.3"
black = "^20.8b1"
invoke = "^1.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
