[tool.poetry]
name = "lambda-boilerplate"
version = "0.0.0"
description = ""
authors = ["Marc Cataford <c.marcandre@gmail.com>"]
license = "MIT"

[tool.poetry.scripts]
lint = "poetry_scripts:lint"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
